<resources>
    <string name="app_name">RARYAB</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already Have An Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Requests Page</string>
</resources>
